@@ -6,7 +6,9 @@ o Added averageQuantile() for matrices in addition to lists.
 o SPEEDUP: Now normalizeQuantileSpline(..., sortTarget=TRUE) sorts the
   target only once for lists of vectors just as done for matrices.
 o DOCUMENTATION: Merged the documentation for normalizeQuantileSpline()
-  for all data types into one help page.
+  for all data types into one help page.  Same for plotXYCurve().
+o BUG FIX: Argument 'lwd' of plotXYCurve(X, ...) was ignored if 'X'
+  was a matrix.
 o Bumped up package dependencies.
 
 
